--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="https://use.typekit.net/veq1too.css">
+    <script src="https://kit.fontawesome.com/0917022522.js" crossorigin="anonymous"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
